--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -2,7 +2,7 @@
   <ion-content>
     <ion-list>
     <ion-toggle  ng-model="settings.enableFriends">
-        Enable Friends - Mudei alguma coisa
+        Enable Friends
     </ion-toggle>
     </ion-list>
   </ion-content>
